tekton/cd/results/overlays/oci-ci-cd/patch-postgres-image.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tekton-results-postgres
  namespace: tekton-pipelines
spec:
  template:
    spec:
      containers:
        - name: postgres
          image: docker.io/bitnami/postgresql@sha256:ac8dd0d6512c4c5fb146c16b1c5f05862bd5f600d73348506ab4252587e7fcc6
