tekton/cd/results/overlays/oci-ci-cd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-results-api-service
  namespace: tekton-pipelines
