tekton/cd/results/overlays/oci-ci-cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    dns.gardener.cloud/dnsnames: 'results.infra.tekton.dev'
    dns.gardener.cloud/ttl: "3600"
  name: results
  namespace: tekton-pipelines
spec:
  ingressClassName: nginx
  tls:
  - secretName: tekton-results-tls
    hosts:
    - results.infra.tekton.dev
  rules:
  - host: results.infra.tekton.dev
    http:
      paths:
      - backend:
          service:
            name: tekton-results-api-service
            port:
              number: 8080
        path: /
        pathType: Prefix
